<resources>
    <string name="app_name">Resistencia</string>
    <string name="Color1">Color 1</string>
    <string name="Color2">Color 2</string>
    <string name="Color4">Color 4</string>
    <string name="Color3">Color 3</string>
    <string name="Resultado">Resultado</string>
    <string-array name="Colores1">
        <item>Negro</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>
    <string-array name="Colores2">
        <item>Marron</item>
        <item>Rojo</item>
        <item>Dorado</item>
        <item>Plata</item>
    </string-array>
</resources>
